--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,9 +10,7 @@ name: "CI/CD: Continuous integration and continuous deployment"
   pull_request:
 
 env:
-  REGISTRY: ghcr.io
-  REGISTRY_USERNAME: "${{ github.repository_owner }}"
-  IMAGE_NAME_MIXEDCASE: "ghcr.io/${{ github.repository }}"
+  IMAGE_NAME_MIXEDCASE: "${{ github.repository }}"
   TEST_STAGE: tester
   PRODUCTION_STAGE: production
 
@@ -42,12 +40,11 @@ jobs:
             type=sha,format=long
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ env.REGISTRY_USERNAME }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.TRANSITDATA_DOCKERHUB_USER }}
+          password: ${{ secrets.TRANSITDATA_DOCKERHUB_TOKEN }}
       - name: Build and export to Docker
         uses: docker/build-push-action@v2
         with:
