--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
     "prettier": "^2.5.1",
+    "protobufjs-cli": "^1.0.0",
     "ts-jest": "^28.0.4",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "pino": "^8.0.0",
-    "protobufjs": "^6.11.2",
+    "protobufjs": "^7.0.0",
     "pulsar-client": "https://github.com/apache/pulsar-client-node/tarball/40ac35e7668ef0a3dc7aa62fc670838f5871b543"
   },
   "jest": {
