--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/pg": "^8.10.2",
     "pg": "^8.11.1",
     "pino": "^8.0.0",
     "protobufjs": "^7.0.0",
