--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@types/pg": "^8.10.2",
+    "dotenv": "^16.3.1",
     "pg": "^8.11.1",
     "pino": "^8.0.0",
     "protobufjs": "^7.0.0",
