--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/pg": "^8.10.2",
     "dotenv": "^16.3.1",
     "pg": "^8.11.1",
+    "pg-promise": "^11.5.4",
     "pino": "^8.0.0",
     "protobufjs": "^7.0.0",
     "pulsar-client": "^1.8.2"
