--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
-    "prettier": "^2.5.1",
+    "prettier": "2.8.8",
     "protobufjs-cli": "^1.0.0",
     "ts-jest": "^28.0.4",
     "typescript": "^4.5.5"
