--- a/package.json
+++ b/package.json
@@ -47,15 +47,19 @@
     "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
-    "prettier": "^2.5.1",
+    "prettier": "2.8.8",
     "protobufjs-cli": "^1.0.0",
     "ts-jest": "^28.0.4",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/pg": "^8.10.2",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.1",
+    "pg-promise": "^11.5.4",
     "pino": "^8.0.0",
     "protobufjs": "^7.0.0",
-    "pulsar-client": "https://github.com/apache/pulsar-client-node/tarball/40ac35e7668ef0a3dc7aa62fc670838f5871b543"
+    "pulsar-client": "^1.8.2"
   },
   "jest": {
     "preset": "ts-jest/presets/js-with-ts",
