--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@types/pg": "^8.10.2",
+    "docker-secret": "^2.0.6",
     "dotenv": "^16.3.1",
     "pg": "^8.11.1",
     "pg-promise": "^11.5.4",
