--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "allowJs": true,
-    "checkJs": false
+    "checkJs": false,
+    "noPropertyAccessFromIndexSignature": false
   }
 }
