--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "protobufjs": "^7.0.0",
     "pulsar-client": "^1.8.2"
   },
+  "overrides": {
+    "tsconfig-paths": "^4.0.0"
+  },
   "jest": {
     "preset": "ts-jest/presets/js-with-ts",
     "testEnvironment": "node",
