--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
   "compilerOptions": {
     "outDir": "dist",
     "allowJs": true,
-    "checkJs": false,
-    "noPropertyAccessFromIndexSignature": false
+    "checkJs": false
   }
 }
