--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,6 +21,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+          cache: "npm"
+      - name: Install NPM dependencies
+        run: npm ci
+      # This step considers also the files ignored in .dockerignore, such as
+      # documentation and GitHub Actions workflows.
+      - name: Check and test outside Docker
+        run: npm run check-and-build
       - name: Lowercase Docker image name
         run: |
           echo "IMAGE_NAME=${IMAGE_NAME_MIXEDCASE,,}" >> "${GITHUB_ENV}"
