--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,11 +48,6 @@ jobs:
             type=sha,format=long
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.TRANSITDATA_DOCKERHUB_USER }}
-          password: ${{ secrets.TRANSITDATA_DOCKERHUB_TOKEN }}
       - name: Build and export to Docker
         uses: docker/build-push-action@v3
         with:
@@ -63,7 +58,14 @@ jobs:
       - name: Check and test
         run: |
           docker run --rm "${{ env.IMAGE_NAME }}:${{ env.TEST_STAGE }}"
+      - name: Login to Docker Hub
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.TRANSITDATA_DOCKERHUB_USER }}
+          password: ${{ secrets.TRANSITDATA_DOCKERHUB_TOKEN }}
       - name: Build and push
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: docker/build-push-action@v3
         with:
           context: .
