--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest": "^29.0.0",
     "prettier": "^3.0.3",
     "protobufjs-cli": "^1.0.0",
+    "quicktype": "^23.0.76",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
