build: Use quicktype to generate partialApc.ts

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Expand partial APC messages with trip metadata and combine them by stops to create full APC messages",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm run build:protobuf && npm run build:src",
+    "build": "npm run build:protobuf && npm run build:quicktype && npm run build:src",
     "build:protobuf": "npm run build:mqtt && npm run build:hfp && npm run build:passenger-count",
+    "build:quicktype": "npm run build:partial-apc",
     "build:mqtt": "mkdir -p ./src/protobuf && rm -f ./src/protobuf/mqtt.* && pbjs --target static-module --wrap es6 --out ./src/protobuf/mqtt.js ./protobuf/mqtt.proto && pbjs --target static-module --wrap es6 ./protobuf/mqtt.proto | pbts --out ./src/protobuf/mqtt.d.ts - && prettier --write ./src/protobuf/mqtt.{js,d.ts}",
     "build:hfp": "mkdir -p ./src/protobuf && rm -f ./src/protobuf/hfp.* && pbjs --target static-module --wrap es6 --out ./src/protobuf/hfp.js ./protobuf/hfp.proto && pbjs --target static-module --wrap es6 ./protobuf/hfp.proto | pbts --out ./src/protobuf/hfp.d.ts - && prettier --write ./src/protobuf/hfp.{js,d.ts}",
     "build:passenger-count": "mkdir -p ./src/protobuf && rm -f ./src/protobuf/passengerCount.* && pbjs --target static-module --wrap es6 --out ./src/protobuf/passengerCount.js ./protobuf/passenger-count.proto && pbjs --target static-module --wrap es6 ./protobuf/passenger-count.proto | pbts --out ./src/protobuf/passengerCount.d.ts - && prettier --write ./src/protobuf/passengerCount.{js,d.ts}",
+    "build:partial-apc": "mkdir -p ./src/quicktype && rm -f ./src/quicktype/partialApc.ts && quicktype --out ./src/quicktype/partialApc.ts --top-level PartialApc --lang ts --src-lang json --src ./quicktype/partial-apc.json --no-date-times --alphabetize-properties --telemetry disable --converters all-objects && prettier --write ./src/quicktype/partialApc.ts && export TMPFILE=\"$(mktemp)\" && echo '// @ts-nocheck' > \"${TMPFILE}\" && cat ./src/quicktype/partialApc.ts >> \"${TMPFILE}\" && mv \"${TMPFILE}\" ./src/quicktype/partialApc.ts",
     "build:src": "rm -rf dist && tsc",
-    "check-and-build": "npm run build:protobuf && npm run ts:check && npm run prettier:check && npm run eslint && npm run test && npm run build",
+    "check-and-build": "npm run build:protobuf && npm run build:quicktype && npm run ts:check && npm run prettier:check && npm run eslint && npm run test && npm run build",
     "eslint": "eslint . --ext .ts --max-warnings=0",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
