build: Update .eslintignore

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,3 @@
-src/partialApc.ts
-src/peeledPartialApc.ts
-src/protobuf/hfp.d.ts
-src/protobuf/mqtt.d.ts
-src/protobuf/passengerCount.d.ts
+dist
+src/protobuf
+src/quicktype
