--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^27.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "fast-check": "^3.13.2",
     "jest": "^29.0.0",
     "prettier": "^3.0.3",
     "protobufjs-cli": "^1.0.0",
