--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/pg": "^8.10.2",
     "docker-secret": "^2.0.6",
     "dotenv": "^16.3.1",
+    "heap-js": "^2.3.0",
     "pg": "^8.11.1",
     "pg-promise": "^11.5.4",
     "pino": "^8.0.0",
