--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@types/pg": "^8.10.2",
+    "async-mutex": "^0.4.0",
     "docker-secret": "^2.0.6",
     "dotenv": "^16.3.1",
     "heap-js": "^2.3.0",
