--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/HSLdevcom/transitdata-partial-apc-expander-combiner#readme",
   "devDependencies": {
+    "@testcontainers/postgresql": "^10.2.2",
     "@tsconfig/node-lts": "^18.12.5",
     "@tsconfig/strictest": "^2.0.2",
     "@types/jest": "^29.5.5",
@@ -55,6 +56,7 @@
     "prettier": "^3.0.3",
     "protobufjs-cli": "^1.0.0",
     "quicktype": "^23.0.76",
+    "testcontainers": "^10.2.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
