--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": ["@tsconfig/node-lts/tsconfig", "@tsconfig/strictest/tsconfig"],
   "compilerOptions": {
+    "rootDir": "src",
     "outDir": "dist",
     "allowJs": true,
     "checkJs": false
-  }
+  },
+  "include": ["src/**/*"]
 }
