--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "pg-promise": "^11.5.4",
     "pino": "^9.0.0",
     "protobufjs": "^7.0.0",
-    "pulsar-client": "^1.8.2"
+    "pulsar-client": "^1.8.2",
+    "xstate": "^5.12.0"
   },
   "jest": {
     "preset": "ts-jest/presets/js-with-ts",
