fix: Forcibly acknowledge too old messages

--- a/docker-compose/docker-compose-complement.env
+++ b/docker-compose/docker-compose-complement.env
@@ -1,6 +1,8 @@
 BACKLOG_DRAINING_WAIT_IN_SECONDS=10
 CAPACITIES_BY_VEHICLE_TYPE=[["A1", 56],["A2", 67],["C", 78],["D", 105],["MA", 19],["MB", 19]]
 DEFAULT_VEHICLE_CAPACITY=78
+FORCED_ACK_CHECK_INTERVAL_IN_SECONDS=1800
+FORCED_ACK_INTERVAL_IN_SECONDS=7200
 HEALTH_CHECK_PORT=8081
 KEEP_APC_FROM_DEADRUN_END_IN_SECONDS=1200
 PINO_LOG_LEVEL=info
