--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,13 +59,13 @@ jobs:
         run: |
           docker run --rm "${{ env.IMAGE_NAME }}:${{ env.TEST_STAGE }}"
       - name: Login to Docker Hub
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.TRANSITDATA_DOCKERHUB_USER }}
           password: ${{ secrets.TRANSITDATA_DOCKERHUB_TOKEN }}
       - name: Build and push
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         uses: docker/build-push-action@v5
         with:
           context: .
