--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/HSLdevcom/transitdata-partial-apc-expander-combiner#readme",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@testcontainers/postgresql": "^10.2.2",
     "@tsconfig/node-lts": "^20.1.1",
     "@tsconfig/strictest": "^2.0.2",
