--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,6 +5,7 @@ name: "CI/CD: Continuous integration and continuous deployment"
   push:
     branches:
       - main
+      - hotfix/**
     tags:
       - "v*"
   pull_request:
