--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,16 +21,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Extract Pulsar version from package.json
-        run: |
-          echo "PULSAR_VERSION=$(jq -r '.config.pulsarVersion' < ./package.json)" >> "${GITHUB_ENV}"
+        uses: actions/checkout@v4
+      - name: Install Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+          cache: "npm"
+      - name: Install NPM dependencies
+        run: npm ci
+      # This step considers also the files ignored in .dockerignore, such as
+      # documentation and GitHub Actions workflows.
+      - name: Check and test outside Docker
+        run: npm run check-and-build
       - name: Lowercase Docker image name
         run: |
           echo "IMAGE_NAME=${IMAGE_NAME_MIXEDCASE,,}" >> "${GITHUB_ENV}"
       - name: Docker meta
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.IMAGE_NAME }}
           tags: |
@@ -40,29 +48,29 @@ jobs:
             type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
             type=sha,format=long
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.TRANSITDATA_DOCKERHUB_USER }}
-          password: ${{ secrets.TRANSITDATA_DOCKERHUB_TOKEN }}
+        uses: docker/setup-buildx-action@v3
       - name: Build and export to Docker
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
           context: .
           load: true
           target: "${{ env.TEST_STAGE }}"
-          build-args: "PULSAR_VERSION=${{ env.PULSAR_VERSION }}"
           tags: "${{ env.IMAGE_NAME }}:${{ env.TEST_STAGE }}"
       - name: Check and test
         run: |
           docker run --rm "${{ env.IMAGE_NAME }}:${{ env.TEST_STAGE }}"
+      - name: Login to Docker Hub
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || contains(github.ref, 'refs/tags/'))
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.TRANSITDATA_DOCKERHUB_USER }}
+          password: ${{ secrets.TRANSITDATA_DOCKERHUB_TOKEN }}
       - name: Build and push
-        uses: docker/build-push-action@v3
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || contains(github.ref, 'refs/tags/'))
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           target: "${{ env.PRODUCTION_STAGE }}"
-          build-args: "PULSAR_VERSION=${{ env.PULSAR_VERSION }}"
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
