--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
       - name: Install Node
         uses: actions/setup-node@v4
         with:
@@ -33,6 +35,10 @@ jobs:
       # documentation and GitHub Actions workflows.
       - name: Check and test outside Docker
         run: npm run check-and-build
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - name: Lowercase Docker image name
         run: |
           echo "IMAGE_NAME=${IMAGE_NAME_MIXEDCASE,,}" >> "${GITHUB_ENV}"
