--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,7 @@ name: "CI/CD: Continuous integration and continuous deployment"
     tags:
       - "v*"
   pull_request:
+  merge_group:
 
 env:
   IMAGE_NAME_MIXEDCASE: "${{ github.repository }}"
