--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "async-mutex": "^0.5.0",
     "dotenv": "^16.5.0",
     "heap-js": "^2.6.0",
+    "jest-junit": "^16.0.0",
     "pg": "^8.16.0",
     "pg-promise": "^11.14.0",
     "pino": "^9.7.0",
