--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,6 +70,17 @@ jobs:
       - name: Check and test
         run: |
           docker run --rm "${{ env.IMAGE_NAME }}:${{ env.TEST_STAGE }}"
+      - name: Check for uncommitted changes
+        run: |
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "::error::Uncommitted changes detected!"
+            echo "The following files were modified or created:"
+            git status --porcelain
+            echo "Please either commit the changes or add them into .gitignore."
+            exit 1
+          else
+            echo "Working directory is clean."
+          fi
       - name: Login to Docker Hub
         if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || contains(github.ref, 'refs/tags/'))
         uses: docker/login-action@v3
